fix: teacher icons now clickable

--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -20,22 +20,7 @@
                 <div class="nav_wrapper">
                     <nav class="links">
                         <div class="dropdown">
-                <a href="../lt/about_us.html" class="apie_mus" tabindex="0">
-                  Apie mus
-                  <svg
-                    class="chevron-down"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24"
-                    width="14"
-                    height="14"
-                    style="
-                      fill: black;
-                      vertical-align: middle;
-                    "
-                  >
-                    <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
-                  </svg>
-                </a>
+                            <a href="../lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
                             <div class="dropdown_content">
                                 <a href="../lt/about_us.html">Studija</a>
                                 <a href="../lt/teachers.html">Mokytojai</a>
@@ -46,9 +31,9 @@
                         <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
                         <a href="../en/teachers.html" class="LT">LT</a>
                     </nav>
-            <a href="../lt/registration.html" class="header_btn"
-              >Registracija</a
-            >
+                    <a href="../lt/registration.html">
+                        <button class="registracija">Registracija</button>
+                    </a>
                 </div>               
             </div>
         </div>
@@ -74,36 +59,60 @@
             </h1>
         </div>
 
-        <div class="teachers_grid">
-            <div class="teacher">
-                <img src="../images/IMG_1304.jpg" alt="Matas Stirbys">
-                <h2>Matas Stirbys <a href="../lt/teacher_1.html">
-                    <i class="bi bi-box-arrow-up-right custom_icon"></i>
-                </a></h2>
-                <p>Mokytojas: Pop, Show Dance, Folk Dance</p>
-            </div>
-            <div class="teacher">
-                <img src="../images/IMG_1354.jpg" alt="Mindaugas Padagas">
-                <h2>Mindaugas Padagas<a href="../lt/teacher_2.html">
-                    <i class="bi bi-box-arrow-up-right custom_icon"></i>
-                </a></h2>
-                <p>Šokio mokytojas metodininkas: Pop, Show Dance, Latin Dance</p>
-            </div>
-            <div class="teacher">
-                <img src="../images/IMG_1279.jpg" alt="Juste Tulickienė">
-                <h2>Justė Tulickienė<a href="../lt/teacher_3.html">
-                    <i class="bi bi-box-arrow-up-right custom_icon"></i>
-                </a></h2>
-                <p>Vyr. Šokio mokytoja: Pop, Show Dance, Folk Dance</p>
-            </div>
-            <div class="teacher">
-                <img src="../images/IMG_0956.jpg" alt="Donata Meiliūtė-Paulauskienė">
-                <h2>Donata Meiliūtė-Paulauskienė <a href="../lt/teacher_4.html">
-                    <i class="bi bi-box-arrow-up-right custom_icon"></i>
-                </a></h2>
-                <p>Šokio mokytoja metodininkė, studijos vedėja: Pop, Show Dance, Folk Dance</p>
-            </div>
-        </div>
+<div class="teachers_grid">
+  <div class="teacher">
+    <a href="../lt/teacher_1.html" class="teacher-link">
+      <img src="../images/IMG_1304.jpg" alt="Matas Stirbys" />
+    </a>
+    <h2>
+      Matas Stirbys
+      <a href="../lt/teacher_1.html">
+        <i class="bi bi-box-arrow-up-right custom_icon"></i>
+      </a>
+    </h2>
+    <p>Mokytojas: Pop, Show Dance, Folk Dance</p>
+  </div>
+
+  <div class="teacher">
+    <a href="../lt/teacher_2.html" class="teacher-link">
+      <img src="../images/IMG_1354.jpg" alt="Mindaugas Padagas" />
+    </a>
+    <h2>
+      Mindaugas Padagas
+      <a href="../lt/teacher_2.html">
+        <i class="bi bi-box-arrow-up-right custom_icon"></i>
+      </a>
+    </h2>
+    <p>Šokio mokytojas metodininkas: Pop, Show Dance, Latin Dance</p>
+  </div>
+
+  <div class="teacher">
+    <a href="../lt/teacher_3.html" class="teacher-link">
+      <img src="../images/IMG_1279.jpg" alt="Justė Tulickienė" />
+    </a>
+    <h2>
+      Justė Tulickienė
+      <a href="../lt/teacher_3.html">
+        <i class="bi bi-box-arrow-up-right custom_icon"></i>
+      </a>
+    </h2>
+    <p>Vyr. Šokio mokytoja: Pop, Show Dance, Folk Dance</p>
+  </div>
+
+  <div class="teacher">
+    <a href="../lt/teacher_4.html" class="teacher-link">
+      <img src="../images/IMG_0956.jpg" alt="Donata Meiliūtė-Paulauskienė" />
+    </a>
+    <h2>
+      Donata Meiliūtė-Paulauskienė
+      <a href="../lt/teacher_4.html">
+        <i class="bi bi-box-arrow-up-right custom_icon"></i>
+      </a>
+    </h2>
+    <p>Šokio mokytoja metodininkė, studijos vedėja: Pop, Show Dance, Folk Dance</p>
+  </div>
+</div>
+
     </section>
     <footer>
         <div class="footer_container">
