--- a/lt/contact.html
+++ b/lt/contact.html
@@ -88,8 +88,10 @@
             <img src="../images/Phone_logo.png" alt="Phone icon" />
             <div class="heading_text">
               <h2>Telefonas</h2>
-              <p><a href="tel:+37063822740">+370 638 22740</a></p>
-              <p><a href="tel:+37068277661">+370 682 77661</a></p>
+              <div class="phone_color">
+                <p><a href="tel:+37063822740">+370 638 22740</a></p>
+                <p><a href="tel:+37068277661">+370 682 77661</a></p>
+              </div>
             </div>
           </div>
         </div>
