--- a/lt/folk_dance.html
+++ b/lt/folk_dance.html
@@ -51,8 +51,8 @@
                 >Tvarkaraščiai</a
               >
               <a href="../lt/prices.html" class="Kainos">Kainos</a>
-              <a href="#" class="Kontaktai">Kontaktai</a>
-              <a href="../en/teachers.html" class="LT">LT</a>
+              <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
+              <a href="../en/folk_dance.html" class="LT">LT</a>
             </nav>
             <a href="../lt/registration.html" class="header_btn"
               >Registracija</a
