--- a/lt/prices.html
+++ b/lt/prices.html
@@ -52,7 +52,7 @@
               >
               <a href="../lt/prices.html" class="Kainos">Kainos</a>
               <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
-              <a href="../en/teachers.html" class="LT">LT</a>
+              <a href="../en/prices.html" class="LT">LT</a>
             </nav>
             <a href="../lt/registration.html" class="header_btn"
               >Registracija</a
