--- a/en/about_us.html
+++ b/en/about_us.html
@@ -1,141 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inkarelis</title>
-  <link rel="stylesheet" href="../css/about_us.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet" />
-  <script src="../js/main.js" defer></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inkarelis</title>
+    <link rel="stylesheet" href="../css/about_us.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <script src="../js/main.js" defer></script>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header_container">
-            <div class="header_content">
-                <a href="http://127.0.0.1:8080/lt/index.html"><img class="logo" src="../images/Inkarelis 1.png" alt="logotipas"></a>
-                <div class="menu-icon">&#9776;</div>
-                <div class="nav_wrapper">
-                    <nav class="links">
-                        <div class="dropdown">
-                            <a href="http://127.0.0.1:8080/lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
-                            <div class="dropdown_content">
-                                <a href="#">Studija</a>
-                                <a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a>
-                                <a href="#">Mūsų vertybės</a>
-                            </div>
-                        </div>
-                        <a href="#" class="Tvarkaraščiai">Tvarkaraščiai</a>
-                        <a href="#" class="Kainos">Kainos</a>
-                        <a href="#" class="Kontaktai">Kontaktai</a>
-                        <a href="http://127.0.0.1:8080/en/teachers.html" class="LT">LT</a>
-                    </nav>
-                    <a href="#">
-                        <button class="registracija">Registracija</button>
-                    </a>
-                </div>               
-            </div>
+      <div class="header_container">
+        <div class="header_content">
+          <a href="../en/index.html"
+            ><img class="logo" src="../images/Inkarelis_1.png" alt="logo"
+          /></a>
+          <div class="menu-icon">&#9776;</div>
+          <div class="nav_wrapper">
+            <nav class="links">
+              <div class="dropdown">
+                <a href="../en/about_us.html" class="apie_mus" tabindex="0">
+                  About Us
+                  <svg
+                    class="chevron-down"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="14"
+                    height="14"
+                    style="fill: black; vertical-align: middle"
+                  >
+                    <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+                  </svg>
+                </a>
+
+                <div class="dropdown_content">
+                  <a href="../en/about_us.html">Studio</a>
+                  <a href="../en/teachers.html">Teachers</a>
+                </div>
+              </div>
+              <a href="../en/schedule.html" class="Tvarkaraščiai">Schedule</a>
+              <a href="../en/prices.html" class="Kainos">Prices</a>
+              <a href="../en/contact.html" class="Kontaktai">Contact</a>
+              <a href="../lt/about_us.html" class="LT">EN</a>
+            </nav>
+            <a href="../en/registration.html" class="header_btn">Register</a>
+          </div>
         </div>
+      </div>
     </header>
     <div class="off-screen-menu">
-        <ul class="main-menu">
-          <li><a href="#" class="open-apie-mus">Apie mus</a></li>
-          <li><a href="#">Tvarkaraščiai</a></li>
-          <li><a href="#">Kainos</a></li>
-          <li><a href="#">Kontaktai</a></li>
-          <li><a href="http://127.0.0.1:8080/en/teachers.html">LT</a></li>
-        </ul>
-        <ul class="apie-mus-menu">
-          <li><a href="#" class="back-to-main">← Atgal</a></li>
-          <li><a href="#">Apie studiją</a></li>
-          <li><a href="http://127.0.0.1:8080/lt/teachers.html">Mokytojai</a></li>
-          <li><a href="#">Mūsų vertybės</a></li>
-        </ul>
+      <ul class="main-menu">
+        <li><a href="#" class="open-apie-mus">About Us</a></li>
+        <li><a href="../en/schedule.html">Schedule</a></li>
+        <li><a href="../en/prices.html">Prices</a></li>
+        <li><a href="../en/contact.html">Contact</a></li>
+        <li><a href="../lt/teachers.html">LT</a></li>
+      </ul>
+      <ul class="apie-mus-menu">
+        <li><a href="#" class="back-to-main">← Back</a></li>
+        <li><a href="../en/about_us.html">Studio</a></li>
+        <li><a href="../en/teachers.html">Teachers</a></li>
+      </ul>
     </div>
 
-  <section id="about_us_section">
-    <div class="about_us_container_first">
-      <div class="about_us_content">
-        <h3>Inkarėlis</h3>
-        <h1>Apie mus</h1>
-        <p>Studija „Inkarėlis“ yra viena iš ilgiausiai gyvuojančių šokių studijų Klaipėdoje, pradėjusi savo veiklą prieš daugiau nei 50 metų. Skaičiuodama ilgus gyvavimo metus, studija "Inkarėlis" gali pasidžiaugti savo pasiekimais ir išugdytais talentais. </p>
+    <section id="about_us_section">
+      <div class="about_us_container_first">
+        <div class="about_us_content">
+          <h3>Inkarelis</h3>
+          <h1>About Us</h1>
+          <p>
+            “Inkarelis” is one of the longest-running dance studios in Klaipėda,
+            having started its activities more than 50 years ago. Over the
+            decades, the studio has grown proud of its achievements and the
+            talents it has nurtured.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="about_us_container_second">
+      <div class="about_us_container_second">
         <div class="about_us_photo">
-            <img src="../images/mokytojai 1.png">
+          <img src="../images/mokytojai 1.png" />
         </div>
         <div class="about_us_text">
-          <h3>Veiklos ir užsiėmimai</h3>
-          <p>Studijoje rasite sau tinkamą užsiėmimą, nepriklausomai nuo amžiaus ar patirties lygio. Šiuo metu daugiau negu 200 mokinių reguliariai lanko grupines pamokas, kurias veda profesionalių ir patyrusių trenerių komanda.</p>
-          <h3>Misija</h3>
-          <p>Mūsų misija - ugdyti talentą ir kūrybiškumą, teikiant aukštos kokybės šokio pamokas įtraukiančioje ir draugiškoje aplinkoje.</p>
+          <h3>Activities and Classes</h3>
+          <p>
+            The studio offers suitable classes for all ages and skill levels.
+            Currently, more than 200 students regularly attend group lessons led
+            by a team of professional and experienced instructors.
+          </p>
+          <h3>Mission</h3>
+          <p>
+            Our mission is to nurture talent and creativity by providing
+            high-quality dance lessons in an engaging and friendly environment.
+          </p>
         </div>
         <div class="about_us_text">
-          <h3>Papildomos veiklos</h3>
-          <p>Be kasdienio mokymo, studijoje organizuojami:</p>
+          <h3>Additional Activities</h3>
+          <p>In addition to regular classes, we also organize:</p>
           <ul>
-            <li>Renginiai su moksleivių tėvais</li>
-            <li>Išvykos</li>
-            <li>Vasaros poilsio veiklos</li>
+            <li>Events with students’ parents</li>
+            <li>Trips</li>
+            <li>Summer leisure activities</li>
           </ul>
-          <p>Visa tai skirta tam, kad kiekvienas mokinys ne tik tobulėtų, bet ir patirtų įsimintinų bei džiaugsmingų akimirkų kelionės eigoje.</p>
+          <p>
+            All of these are aimed at not only helping each student grow but
+            also providing joyful and memorable experiences along the way.
+          </p>
         </div>
         <div class="about_us_photo">
-          <img src="../images/IMG_8607 1.png">
+          <img src="../images/IMG_8607 1.png" />
         </div>
       </div>
-  </section>
+    </section>
 
-  <footer>
-    <div class="footer_container">
-      <div class="footer_content">
-        <div class="footer_column">
-          <a href="#"><img class="logo_white" src="../images/Inkarelis 2.png" alt="logotipas_white" /></a>
-          <div class="footer_paragraph">
-            <p>Choreografijos studija „Inkarėlis“ – šokių studija pietinėje Klaipėdos miesto dalyje – siūlo mokiniams įvairaus šokių stiliaus užsiėmimus.</p>
+    <footer>
+      <div class="footer_container">
+        <div class="footer_content">
+          <div class="footer_column">
+            <a href="../en/index.html"
+              ><img
+                class="logo_white"
+                src="../images/Inkarelis 2.png"
+                alt="logo_white"
+            /></a>
+            <div class="footer_paragraph">
+              <p>
+                "Inkarelis" dance studio – a dance studio in the southern part
+                of Klaipėda – offers various dance style classes for students.
+              </p>
+            </div>
+            <div class="social_logos">
+              <a
+                target="_blank"
+                href="https://www.instagram.com/inkarelistudio/"
+                ><img
+                  class="instagram"
+                  src="../images/Instagram.png"
+                  alt="instagram"
+              /></a>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"
+                ><img
+                  class="facebook"
+                  src="../images/Facebook.png"
+                  alt="facebook"
+              /></a>
+            </div>
           </div>
-          <div class="social_logos">
-            <a target="_blank" href="https://www.instagram.com/inkarelistudio/"><img class="instagram" src="../images/Instagram.png" alt="instagram" /></a>
-            <a target="_blank" href="https://www.facebook.com/choreografijosstudija.inkarelis?locale=lt_LT"><img class="facebook" src="../images/Facebook.png" alt="facebook" /></a>
+
+          <div class="footer_column">
+            <h2>Navigate</h2>
+            <ul>
+              <li><a href="../en/about_us.html">Dance Studio</a></li>
+              <li>
+                <a href="../en/index.html#sokiu_stiliai_section">Dance Styles</a>
+              </li>
+              <li><a href="../en/teachers.html">Teachers</a></li>
+              <li><a href="../en/schedule.html">Schedule</a></li>
+              <li><a href="../en/prices.html">Prices</a></li>
+              <li><a href="../en/registration.html">Register</a></li>
+            </ul>
+          </div>
+
+          <div class="footer_column">
+            <h2>Contacts</h2>
+            <p>+370 463 24489</p>
+            <p>+370 462 21906</p>
+            <p>inkarelis@kkljc.lt</p>
+          </div>
+
+          <div class="footer_column">
+            <h2>Laukininkų g. 13A-2, Klaipėda</h2>
+            <img src="../images/Lt_map.png" alt="Map" class="map" />
           </div>
         </div>
 
-        <div class="footer_column">
-          <h2>Naršyti</h2>
-          <ul>
-            <li><a href="#">Šokių studija</a></li>
-            <li><a href="#">Šokių stiliai</a></li>
-            <li><a href="#">Treneriai</a></li>
-            <li><a href="#">Tvarkaraščiai</a></li>
-            <li><a href="#">Kainos</a></li>
-            <li><a href="#">Registracija</a></li>
-          </ul>
-        </div>
-
-        <div class="footer_column">
-          <h2>Kontaktai</h2>
-          <p>+370 463 24489</p>
-          <p>+370 462 21906</p>
-          <p>inkarelis@kkljc.lt</p>
-        </div>
-
-        <div class="footer_column">
-          <h2>Laukininkų g. 13, Klaipėda</h2>
-          <img src="../images/Lt_map.png" alt="Map" class="map" />
+        <div class="footer_bottom">
+          <hr />
+          <p class="copyright">“Inkarelis” Dance Studio © 2025.</p>
         </div>
       </div>
-
-      <div class="footer_bottom">
-        <hr />
-        <p class="copyright">
-          Šokių studija „Inkarėlis“ © 2025.
-        </p>
-      </div>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
