--- a/lt/teachers.html
+++ b/lt/teachers.html
@@ -20,7 +20,19 @@
                 <div class="nav_wrapper">
                     <nav class="links">
                         <div class="dropdown">
-                            <a href="../lt/about_us.html" class="apie_mus" tabindex="0">Apie mus</a>
+                                            <a href="../lt/about_us.html" class="apie_mus" tabindex="0">
+                  Apie mus
+                  <svg
+                    class="chevron-down"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="14"
+                    height="14"
+                    style="fill: black; vertical-align: middle"
+                  >
+                    <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+                  </svg>
+                </a>
                             <div class="dropdown_content">
                                 <a href="../lt/about_us.html">Studija</a>
                                 <a href="../lt/teachers.html">Mokytojai</a>
@@ -31,9 +43,9 @@
                         <a href="../lt/contact.html" class="Kontaktai">Kontaktai</a>
                         <a href="../en/teachers.html" class="LT">LT</a>
                     </nav>
-                    <a href="../lt/registration.html">
-                        <button class="registracija">Registracija</button>
-                    </a>
+            <a href="../lt/registration.html" class="header_btn"
+              >Registracija</a
+            >
                 </div>               
             </div>
         </div>
