fix: adress change

--- a/en/teacher_2.html
+++ b/en/teacher_2.html
@@ -180,7 +180,7 @@
           </div>
 
           <div class="footer_column">
-            <h2>Laukininkų st. 13, Klaipėda</h2>
+            <h2>Laukininkų g. 13A-2, Klaipėda</h2>
             <img src="../images/Lt_map.png" alt="Map" class="map" />
           </div>
         </div>
