--- a/lt/contact.html
+++ b/lt/contact.html
@@ -67,7 +67,7 @@
         <li><a href="../lt/schedule.html">Tvarkaraščiai</a></li>
         <li><a href="../lt/prices.html">Kainos</a></li>
         <li><a href="../lt/contact.html">Kontaktai</a></li>
-        <li><a href="../en/teachers.html">LT</a></li>
+        <li><a href="../en/contact.html">LT</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Atgal</a></li>
