--- a/en/teacher_1.html
+++ b/en/teacher_1.html
@@ -64,7 +64,7 @@
         <li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/prices.html">Prices</a></li>
         <li><a href="../en/contact.html">Contact</a></li>
-        <li><a href="../lt/teachers.html">EN</a></li>
+        <li><a href="../lt/teacher_1.html">EN</a></li>
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Back</a></li>
