fix: studio name

--- a/en/prices.html
+++ b/en/prices.html
@@ -68,9 +68,8 @@
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Back</a></li>
-        <li><a href="../en/about_us.html">About the studio</a></li>
+        <li><a href="../en/about_us.html">Studio</a></li>
         <li><a href="../en/teachers.html">Teachers</a></li>
-        <li><a href="../en/about_us.html">Our values</a></li>
       </ul>
     </div>
 
