--- a/en/folk_dance.html
+++ b/en/folk_dance.html
@@ -68,7 +68,7 @@
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Back</a></li>
-        <li><a href="../en/about_us.html">About the Studio</a></li>
+        <li><a href="../en/about_us.html">Studio</a></li>
         <li><a href="../en/teachers.html">Teachers</a></li>
       </ul>
     </div>
