--- a/en/teachers.html
+++ b/en/teachers.html
@@ -67,7 +67,7 @@
       </ul>
       <ul class="apie-mus-menu">
         <li><a href="#" class="back-to-main">← Back</a></li>
-        <li><a href="../en/about_us.html">About the studio</a></li>
+        <li><a href="../en/about_us.html">Studio</a></li>
         <li><a href="../en/teachers.html">Teachers</a></li>
       </ul>
     </div>
